# starrygl-unidynGraph

./: .gitignore  CLAUDE.md  CMakeLists.txt  MIGRATION_PLAN.md  ORTHOGONAL_SEPARATION.md  README.md  README.zh-CN.md  bench_mpnn_lstm.py  instruct.md  pyproject.toml  run_mpnn_lstm_4gpu.sh  run_tgn_ctdg_flare.sh  train_mpnn_lstm_4gpu.py  train_tgn.py  train_tgn_dist.py
configs/: chunk_default.yaml  mpnn_lstm_4gpu.yaml  mpnn_lstm_bench.yaml  tgn_wiki.yaml  tgn_wiki_speed.yaml  tgn_wikitalk.yaml
docs/: interface.md  interface.zh-CN.md  library.md  library.zh-CN.md  project_architecture.zh-CN.md  serve.sh  start.sh
docs/logs/: http.out  log.out  ngrok.out
docs/source/: conf.py  index.rst
docs/source/advanced/sampling_parallel/: features.rst  index.rst
docs/source/api/python/: cache.rst  data_loader.rst  distributed.rst  index.rst  modules.rst  neighbor_sampler.rst  starry_unigraph.backends.ctdg.data.rst  starry_unigraph.backends.ctdg.memory.rst  starry_unigraph.backends.ctdg.model.rst  starry_unigraph.backends.ctdg.rst  starry_unigraph.backends.ctdg.sampler.rst  starry_unigraph.backends.flare.partition_data.rst  starry_unigraph.backends.flare.rst  starry_unigraph.backends.rst  starry_unigraph.checkpoint.rst  starry_unigraph.core.dtdg_kernel.rst  starry_unigraph.core.protocol.rst  starry_unigraph.core.rst  starry_unigraph.data.rst  starry_unigraph.native.rst  starry_unigraph.preprocess.base.rst  starry_unigraph.providers.common.rst  starry_unigraph.providers.ctdg.rst  starry_unigraph.providers.dtdg_data.rst  starry_unigraph.providers.dtdg_preprocess.rst  starry_unigraph.providers.rst  starry_unigraph.registry.model_registry.rst  starry_unigraph.registry.rst  starry_unigraph.rst  starry_unigraph.runtime.base.rst  starry_unigraph.runtime.flare.route.rst  starry_unigraph.runtime.flare.rst  starry_unigraph.runtime.flare.state.rst  starry_unigraph.runtime.online.data.rst  starry_unigraph.runtime.online.memory.rst  starry_unigraph.runtime.online.route.rst  starry_unigraph.runtime.online.runtime.rst  starry_unigraph.session.rst  starry_unigraph.tasks.base.rst  starry_unigraph.tasks.node_classify.rst  (+1 more)
docs/source/architecture/: __init__.rst  artifact_format.rst  model_modules.rst  preprocess_layer.rst  route_layer.rst  unified_pipeline.rst
docs/source/cheatsheets/: index.rst
docs/source/guide/: install_guide.rst
docs/source/rel_0_1_0/: CTDGTraining.rst  ChunkTraining.rst  DTDGTraining.rst  index.rst
docs/source/rel_0_1_1/: index.rst  intro.rst  reference.rst
docs/source/rel_0_1_1/training/: chunk.rst
docs/source/tutorial/: CTDGTraining.rst  ChunkTraining.rst  UniTraining.rst  dataset.rst  index.rst  intro.rst  module.rst
examples/: train_mpnn_lstm_4gpu.py
starry_unigraph/: __init__.py  __main__.py  distributed.py  lib_stable.py  session.py  types.py
starry_unigraph.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
starry_unigraph/backends/: __init__.py
starry_unigraph/backends/chunk/prepare/: adaptive.py  generate_chunk.py  time_split.py
starry_unigraph/backends/chunk/utils/: utils.py
starry_unigraph/backends/ctdg/: __init__.py  data.py  historical_cache.py  memory.py  model.py  preprocess.py  preprocess_partition.py  route.py  runtime.py  sampler.py
starry_unigraph/backends/ctdg/runtime/: __init__.py  cache.py  data.py  factory.py  memory.py  models.py  route.py  runtime.py  sampler.py  session.py
starry_unigraph/backends/dtdg/: __init__.py  dtdg_prepare.py  preprocess.py  types.py
starry_unigraph/backends/dtdg/runtime/: loader.py  models.py  session_loader.py  state.py  training.py
starry_unigraph/backends/flare/: __init__.py  collection.py  models.py  partition_data.py  route.py  stgraph_blob.py  stgraph_loader.py
starry_unigraph/checkpoint/: __init__.py  io.py
starry_unigraph/cli/: main.py
starry_unigraph/config/: apan.yaml  default.yaml  dyrep.yaml  evolvegcn.yaml  gcn.yaml  jodie.yaml  mpnn_lstm.yaml  schema.py  tgat.yaml  tgcn.yaml  tgn.yaml
starry_unigraph/core/: __init__.py  ctdg.py  ctdg_kernel.py  dtdg.py  dtdg_kernel.py  protocol.py
starry_unigraph/data/: __init__.py  batch_data.py  chunk_atomic.py  chunk_builder.py  chunk_data.py  feature_store.py  global_csr.py  partition.py  raw_temporal.py  sample_config.py
starry_unigraph/lib/: __init__.py  loader.py
starry_unigraph/models/: __init__.py  base.py  task_head.py  wrapped.py
starry_unigraph/native/: __init__.py  bts_sampler.py
starry_unigraph/preprocess/: __init__.py  base.py  chunk.py  ctdg.py  dtdg.py  dtdg_prepare.py
starry_unigraph/providers/: __init__.py  common.py  ctdg.py  dtdg.py  dtdg_common.py  dtdg_data.py  dtdg_loaders.py  dtdg_preprocess.py  dtdg_train.py
starry_unigraph/registry/: __init__.py  model_registry.py  provider_registry.py  task_adapter.py  task_registry.py
starry_unigraph/runtime/: __init__.py  _split.py  backend.py  backend_adapters.py  base.py  engine.py
starry_unigraph/runtime/cache/: __init__.py  decay_cache.py  hot_cache.py  partition_cache.py
starry_unigraph/runtime/chunk/: __init__.py  session_loader.py  training.py
starry_unigraph/runtime/comm/: __init__.py  comm_engine.py  spatial_plan.py  state_plan.py
starry_unigraph/runtime/flare/: __init__.py  models.py  session_loader.py
starry_unigraph/runtime/modules/: __init__.py  gcn_layers.py  rnn_cells.py  temporal_conv.py  time_encode.py
starry_unigraph/runtime/online/: __init__.py  memory.py  runtime.py  session.py
starry_unigraph/runtime/route/: comm_plan.py  route.py
starry_unigraph/runtime/runner/: __init__.py  base.py  ctdg_runner.py  dtdg_runner.py
starry_unigraph/runtime/state/: __init__.py  base.py  memory_state.py  rnn_state.py
starry_unigraph/runtime/store/: MemoryState.py
starry_unigraph/tasks/: __init__.py  base.py  node_classify.py  node_regression.py  temporal_link_prediction.py
tests/: test_orthogonal_separation.py  test_session.py
tmp/: bench_ctdg_dist.py  probe_route_forward.py  probe_train_iter.py  probe_train_loop.py  probe_train_step.py  run_dtdg_dist_eval.py  starry_dtdg_dist.yaml
