[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "starry-unigraph"
version = "0.1.0"
description = "Unified scheduler for distributed CTDG/DTDG training and inference."
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
]

[tool.setuptools.packages.find]
include = ["starry_unigraph*"]

[tool.setuptools.package-data]
"starry_unigraph.lib" = ["*.so"]
"starry_unigraph.vendor.bts_sampler" = ["**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
